# GitHub-IP-hosts

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hosts  hosts_single  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  lint.yml  workflow.yml
Scripts/: constants.py  get_ip.py  main.py  process_ip.py  update_readme.py
scripts/: constants.py  get_ip.py  main.py  process_ip.py  update_readme.py
tests/: __init__.py  test_functions.py
