[tool.poetry]
name = "github-ip-hosts"
version = "0.1.1"
description = "GitHub IP hosts"
license = "Apache-2.0"
authors = ["ittuann <ittuann@outlook.com> (https://github.com/ittuann)"]
readme = "README.md"

repository = "https://github.com/ittuann/GitHub-IP-hosts"

[tool.poetry.dependencies]
python = "^3.11"
requests = {extras = ["socks"], version = "^2.32.3"}
pydantic = "^2.8.2"
ping3 = "^4.0.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240712"
autoflake = "^2.3.1"
pyupgrade = "^3.16.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 120

[tool.mypy]
pretty = true
warn_redundant_casts = true

[tool.autoflake]
check-diff = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
extend-select = [
  # pydocstyle
  "D",
]
ignore = ["F401", "UP009", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-ra --cov=./scripts --cov-report=term --cov-report=xml --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
