[project]
name = "github-ip-hosts"
version = "0.1.1"
description = "GitHub IP hosts"
keywords = ["hosts", "GitHub", "ip"]
license = "Apache-2.0"
authors = [{name = "ittuann", email = "ittuann@outlook.com"}]
maintainers = [{name = "ittuann", email = "ittuann@outlook.com"}]
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
  "requests[socks]>=2.34.2",
  "pydantic>=2.13.4",
  "ping3>=5.1.5"
]

[project.urls]
Homepage = "https://github.com/ittuann/GitHub-IP-hosts"
Repository = "https://github.com/ittuann/GitHub-IP-hosts"
Documentation = "https://github.com/ittuann/GitHub-IP-hosts?tab=readme-ov-file"

[project.optional-dependencies]
dev = [
  "black>=26.5.1",
  "ruff>=0.15.19",
  "mypy>=2.1.0",
  "types-requests>=2.33.0.20260518",
  "pre-commit>=4.6.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # Pyflakes
  "UP",   # pyupgrade
  "B",    # Flake8-bugbear
  "SIM",  # Flake8-simplify
  "I",    # isort
  "D",    # pydocstyle
  "RUF",  # Ruff
]
ignore = ["D415", "RUF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
pretty = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-ra --cov=./scripts --cov-report=term --cov-report=xml --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
